make-a-wish-salesforce/src/objects/Wish_Change_Request__c.object
<CustomObject>
    <description>Captures changes generated from the use of the Wish Affiliation components by volunteers, and displays them to internal staff to approve or reject.</description>
    <fields>
        <fullName>Field_API_Name_for_Proposed_Change__c</fullName>
        <label>Field API for Proposed Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label_for_Proposed_Change__c</fullName>
        <label>Field Label for Proposed Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Previous_Value__c</fullName>
        <label>Previous Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Record__c</fullName>
        <formula>HYPERLINK(Record_Id__c, Record_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Change_Request__c</fullName>
        <description>Checked as True if the current user is the same as the Related Case Owner.</description>
        <formula>IF($User.Id = Wish_Case_Id__r.Owner:User.Id, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Change Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_API_Name_for_Proposed_Change__c</fullName>
        <label>Object API for Proposed Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <label>Record Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the change request</description>
        <inlineHelpText>Status of the change request</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proposed</fullName>
                    <default>true</default>
                    <label>Proposed</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wish_Affiliated_Contact_Name_Text__c</fullName>
        <description>Intended for use in Flow, to display the name of the Wish Affiliation&apos;s Contact as text only.</description>
        <formula>IF(ISBLANK( Wish_Affiliation__c ),  Wish_Case_Id__r.Contact.FirstName &amp; &quot; &quot; &amp; Wish_Case_Id__r.Contact.LastName , Wish_Affiliation__r.Contact__r.FirstName &amp; &quot; &quot; &amp; Wish_Affiliation__r.Contact__r.LastName )</formula>
        <label>Wish Affiliated Contact Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish_Affiliated_Contact__c</fullName>
        <description>Displays the related Wish Affiliation&apos;s Contact name.</description>
        <formula>HYPERLINK(  Wish_Affiliation__r.Contact__r.Id  , Wish_Affiliation__r.Contact__r.FirstName &amp; &quot; &quot; &amp; Wish_Affiliation__r.Contact__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wish Affiliated Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish_Affiliation_Relationship__c</fullName>
        <description>Displays the Wish Affiliation Relation Type</description>
        <formula>Wish_Affiliation__r.Relationship_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wish Affiliation Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish_Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Wish Affiliation Record ID</description>
        <label>Wish Affiliation</label>
        <referenceTo>Wish_Affiliation__c</referenceTo>
        <relationshipLabel>Wish Change Requests</relationshipLabel>
        <relationshipName>Wish_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wish_Case_Id__c</fullName>
        <description>References the Wish Case Id the change request belong to.</description>
        <inlineHelpText>Related Wish Case</inlineHelpText>
        <label>Wish Case</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a &apos;Wish&apos; case record type.</errorMessage>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Wish</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Wish Change Requests</relationshipLabel>
        <relationshipName>Wish_Change_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Wish_Child_Name__c</fullName>
        <description>Displays the Wish Child&apos;s Name base on the associated Case record.</description>
        <formula>HYPERLINK( Wish_Case_Id__r.ContactId , Wish_Case_Id__r.Contact.FirstName &amp; &quot; &quot; &amp; Wish_Case_Id__r.Contact.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wish Child Name</label>
        <type>Text</type>
    </fields>
    <label>Wish Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Wish_Case_Id__c</columns>
        <columns>Wish_Child_Name__c</columns>
        <columns>Field_Label_for_Proposed_Change__c</columns>
        <columns>Field_Previous_Value__c</columns>
        <columns>Field_New_Value__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Change_Requests</fullName>
        <columns>Field_New_Value__c</columns>
        <columns>Field_Previous_Value__c</columns>
        <columns>Field_Label_for_Proposed_Change__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Link_to_Record__c</columns>
        <columns>Wish_Child_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Change_Request__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Proposed</value>
        </filters>
        <label>My Change Requests</label>
    </listViews>
    <listViews>
        <fullName>Null_Old_Values</fullName>
        <columns>NAME</columns>
        <columns>Field_Previous_Value__c</columns>
        <columns>Field_New_Value__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Previous_Value__c</field>
            <operation>equals</operation>
        </filters>
        <label>&apos;Blank&apos; Previous Values</label>
    </listViews>
    <nameField>
        <displayFormat>WCR-{00000}</displayFormat>
        <label>Wish Change Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wish Change Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>